syntax = "proto3";

package RFCOMM;

service RFCOMM {
  rpc OpenRFCOMMChannel(OpenRFCOMMChannelRequest) returns (OpenRFCOMMChannelResponse);
  rpc SendRFCOMMData(SendRFCOMMDataRequest) returns (SendRFCOMMDataResponse);
  rpc RecvRFCOMMData(RecvRFCOMMDataRequest) returns (RecvRFCOMMDataResponse);
}

message OpenRFCOMMChannelRequest {
  string addr = 1;
  string uuid = 2;
}

message OpenRFCOMMChannelResponse {
  bool success = 1;
}

message SendRFCOMMDataRequest {
  bytes data = 1;
}

message SendRFCOMMDataResponse {
  bool success = 1;
}

message RecvRFCOMMDataRequest {
}

message RecvRFCOMMDataResponse {
  bytes data = 1;
}